--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.2.0
+  flutter_svg: ^1.0.0
+  font_awesome_flutter: ^9.2.0
+  google_fonts: ^6.2.1
+  intl: 0.19.0
+#  json_path: ^0.3.1
+  page_transition: ^2.0.4
+  timeago: ^3.1.0
+  url_launcher: ^6.0.17
+
+  # cupertino
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+  flutter_launcher_icons: ^0.9.2
+  # flutter_test:
+  #   sdk: flutter
 
 flutter:
   uses-material-design: true
