--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,22 @@
 plugins {
-    id "com.android.application"
+    id "com.henshin.henshinapp"
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+}
+
+dependencies {
+  // Import the Firebase BoM
+  implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
+
+
+  // TODO: Add the dependencies for Firebase products you want to use
+  // When using the BoM, don't specify versions in Firebase dependencies
+  implementation("com.google.firebase:firebase-analytics")
+
+
+  // Add the dependencies for any other desired Firebase products
+  // https://firebase.google.com/docs/android/setup#available-libraries
 }
 
 def localProperties = new Properties()
@@ -51,8 +65,16 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.0'
+    }
+}
 }
 
 flutter {
     source = "../.."
 }
+
+// Add this at the very end of the file
+apply plugin: 'com.google.gms.google-services'
