--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,12 @@ dependencies:
   timeago: ^3.1.0
   url_launcher: ^6.0.17
 
+  # firebase
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_database: ^10.3.8
+
   # cupertino
   cupertino_icons: ^1.0.4
 
