--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+// Project-level build.gradle
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.google.gms:google-services:4.3.10' // Add this line
+    }
+}
+
 allprojects {
     repositories {
         google()
