--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,15 @@ dependencies:
 
   # firebase
   firebase_core: ^2.24.2
+  firebase_core_web: ^2.10.0
   firebase_auth: ^4.15.3
+  firebase_auth_web: ^5.8.12
   cloud_firestore: ^4.13.6
   firebase_database: ^10.3.8
 
   # cupertino
   cupertino_icons: ^1.0.4
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
