--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
     sdk: flutter
   auto_size_text: ^3.0.0
   cached_network_image: ^3.2.0
-  flutter_svg: ^1.0.0
-  font_awesome_flutter: ^9.2.0
+  flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   intl: 0.19.0
 #  json_path: ^0.3.1
@@ -23,25 +23,29 @@ dependencies:
   url_launcher: ^6.0.17
 
   # firebase
-  firebase_core: ^2.24.2
-  firebase_core_web: ^2.10.0
-  firebase_auth: ^4.15.3
-  firebase_auth_web: ^5.8.12
-  cloud_firestore: ^4.13.6
-  firebase_database: ^10.3.8
+  firebase_core: ^3.6.0
+  firebase_core_web: ^2.8.0
+  firebase_auth: ^5.3.1
+  firebase_auth_web: ^5.8.1
+  cloud_firestore: ^5.4.4
+  firebase_database: ^11.1.4
 
   # cupertino
   cupertino_icons: ^1.0.4
   logger: ^2.4.0
 
+  js: ^0.7.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.14.1
   # flutter_test:
   #   sdk: flutter
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/app_launcher_icon.png
