--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.0.7  
   flutter_localizations:
     sdk: flutter
   auto_size_text: ^3.0.0
