--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   image_picker: ^1.0.7
   image_cropper: ^8.0.2
   image_cropper_for_web: 6.0.2
+  provider: ^6.1.2
+  go_router: ^14.2.1
+
+
 
   firebase_storage: ^12.3.4
 
