--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   image_cropper_for_web: 6.0.2
   provider: ^6.1.2
   go_router: ^13.2.1
+  stream_chat_flutter: ^8.0.0
+
 
   firebase_storage: ^12.3.4
 
