--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   intl: 0.19.0
+  google_maps_flutter: ^2.5.0
+  flutter_google_places_hoc081098: ^2.0.0
 #  json_path: ^0.3.1
   page_transition: ^2.0.4
   timeago: ^3.1.0
@@ -59,3 +61,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/RuralHubLogo.png
+    - assets/images/rh2.png
+
+
